# ChangeLog for dev-vcs/gitosis-gentoo
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-vcs/gitosis-gentoo/ChangeLog,v 1.2 2010/07/21 03:36:59 tampakrap Exp $

*gitosis-gentoo-0.2_p20100718 (21 Jul 2010)

  21 Jul 2010; Theo Chatzimichos <tampakrap@gentoo.org>
  +gitosis-gentoo-0.2_p20100718.ebuild:
  Version bump
  It includes commit a88bc14fe0b5507ea54c5d5fe695e828beefd7ca which exports
  GITOSIS_NAME and GITOSIS_EMAIL env vars

  19 Jun 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  gitosis-gentoo-0.2_p20080203.ebuild, gitosis-gentoo-0.2_p20080711.ebuild,
  gitosis-gentoo-0.2_p20081028.ebuild, gitosis-gentoo-0.2_p20090515.ebuild:
  dev-util/gitosis renamed to dev-vcs/gitosis (bug #56967).

  17 Mar 2010; Sebastian Pipping <sping@gentoo.org>
  gitosis-gentoo-0.2_p20080203.ebuild, gitosis-gentoo-0.2_p20080711.ebuild,
  gitosis-gentoo-0.2_p20081028.ebuild, gitosis-gentoo-0.2_p20090515.ebuild:
  Propagate move of dev-util/git to dev-vcs/git

  08 Feb 2010; Peter Volkov <pva@gentoo.org>
  gitosis-gentoo-0.2_p20080203.ebuild, gitosis-gentoo-0.2_p20080711.ebuild,
  gitosis-gentoo-0.2_p20081028.ebuild, gitosis-gentoo-0.2_p20090515.ebuild:
  Add inherit eutils for enewgroup and enewuser.

  15 Jan 2010; Christian Faulhammer <fauli@gentoo.org>
  gitosis-gentoo-0.2_p20090515.ebuild:
  Transfer Prefix keywords

*gitosis-gentoo-0.2_p20090515 (15 May 2009)

  15 May 2009; Robin H. Johnson <robbat2@gentoo.org>
  +gitosis-gentoo-0.2_p20090515.ebuild:
  Version bump with the cgit patch.

  24 Nov 2008; Robin H. Johnson <robbat2@gentoo.org>
  gitosis-gentoo-0.2_p20080711.ebuild, gitosis-gentoo-0.2_p20081028.ebuild:
  Bug #247322 - gitosis does actually need setuptools at runtime.

*gitosis-gentoo-0.2_p20081028 (28 Oct 2008)

  28 Oct 2008; Robin H. Johnson <robbat2@gentoo.org>
  +gitosis-gentoo-0.2_p20081028.ebuild:
  Version bump per bug #236185, fixes for git-1.6.
