@@ -1,3 +1,4 @@
+DIST gitosis-gentoo-0.2_p20100721.tar.bz2 37330 RMD160 807056f758be0a0be6449045dd01b2e6c6a9c702 SHA1 b2418fb422bfc4f8c0525fb362f2cd8eb564398f SHA256 447de9239bc8ac4a56cf074afd1f84abccf7358b46f5612f2084e5da6a812868
 DIST gitosis-gentoo-20080711-800ac5b58a60de070a10cafce609f28fc2905691.tar.bz2 35787 RMD160 927b52e3d59be5f80cf8a441081501f6955a0c82 SHA1 221e41f47ffa5b995554607edbfcf9cc2efb6b03 SHA256 78119bea1dfa3b6a7aa3aa13095939f1bb8b4740b2e3cbda3bcd95efabd81320
 DIST gitosis-gentoo-20081025-acf867e8cd12f31dcf0f9fff92f3a3c34912b751.tar.bz2 36630 RMD160 4449b991dd6706c57de0b4726c102adc79197859 SHA1 54683810416a1a115d096bcd5cb0f1b829b62402 SHA256 e84e9d40ab11c156b30ca5d781c4e6621ece0ef18e9140b9714e75373d8fa402
 DIST gitosis-gentoo-20090515-1d768c5b87bbbe7ab1f3356c98943ed099bd40f3.tar.bz2 36988 RMD160 79122dd7aaeb1ef8fd23f2d2c09e69ef28698591 SHA1 9b22baee81244069002e0660e6d2ed7d24cd98c2 SHA256 6010681dcb8aa9aaa6ed720494daf6d366ed12eb6dc65044ceb1a924fa305743
@@ -8,5 +9,6 @@ EBUILD gitosis-gentoo-0.2_p20080711.ebuild 1237 RMD160 8822cfdd4a776bb4bd49700f1
 EBUILD gitosis-gentoo-0.2_p20081028.ebuild 1237 RMD160 0dfc049690e02c03e718f86a472a7f4baa11de24 SHA1 9537cfd3beecc546ed473185d4be77d818e8a9d8 SHA256 afd448484e0f71117a16cfab789b2937a131c6973deb31fcba7ceecbaa80e40a
 EBUILD gitosis-gentoo-0.2_p20090515.ebuild 1416 RMD160 170e1105c9d69a17fd84a04b9d05f77c26da7773 SHA1 19e7c51b6932adf80d9fecc114e69d4478c1d309 SHA256 a68d536ab2fd8ee18d257a23f7f430ade209d7ad0a313694c218803593835dd6
 EBUILD gitosis-gentoo-0.2_p20100718.ebuild 1417 RMD160 3ec7eb84f33ff5ca95a9af0e8888862f6c84ae73 SHA1 12252afa09c41ce35f77c3cb23bde841b8560486 SHA256 b2b232b7a694139918e4bfa1399fea6761d680d4ec3a573490c998e89103a7ed
-MISC ChangeLog 2716 RMD160 43361cc33aeee8dd31fbc9e9a94d49d5c1291cf3 SHA1 2c8c231980a714803f9b6a4e96f38e7ac66fd0aa SHA256 d3ec9cd2b957029e9aa53fb2a47d4c95651b674b06c469d437fa2c45cc0dc8fb
+EBUILD gitosis-gentoo-0.2_p20100721.ebuild 1547 RMD160 f736323693aea656264da8ea591491a03f00e780 SHA1 2374f5dedf011222a3376e48ed5911c3918ce2fa SHA256 15bdfb4935b915b22400990639b5c85f34ab36979578e4d55546efb03db5c6bc
+MISC ChangeLog 2886 RMD160 bc5ac6cdd1693f65bcf9280a1062002af52b60b9 SHA1 220d75e722c99efa82e82038a2a25d6b605f6cd0 SHA256 e9e9dad80dda413f0ab1ccd655aa280319c945f95f4b8eaebf5634ed0381d625
 MISC metadata.xml 377 RMD160 74cab863bd42cd43f0c07276c4be096e5fa38291 SHA1 c05576f5fc0e51708a151d73f8db0f04d3d36f8c SHA256 ea6084f3ae1cc0247c58bceae2259e7eb800e94f39678c2d004cfd4ae6c42b70
