@@ -1,6 +1,12 @@
 # ChangeLog for dev-vcs/gitosis-gentoo
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-vcs/gitosis-gentoo/ChangeLog,v 1.2 2010/07/21 03:36:59 tampakrap Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-vcs/gitosis-gentoo/ChangeLog,v 1.3 2010/07/21 15:47:28 robbat2 Exp $
+
+*gitosis-gentoo-0.2_p20100721 (21 Jul 2010)
+
+  21 Jul 2010; Robin H. Johnson <robbat2@gentoo.org>
+  +gitosis-gentoo-0.2_p20100721.ebuild:
+  Another verbump for minor bug.
 
 *gitosis-gentoo-0.2_p20100718 (21 Jul 2010)
 
